--- a/app/views/contents/_show.html.erb
+++ b/app/views/contents/_show.html.erb
@@ -15,7 +15,7 @@
     <div class="card-footer bg-info">
       <button type="button" class="btn btn-sm btn-info pull-right" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
-        Close
+        <%= t('views.modals.close') %>
       </button>
     </div>
   </div>
