--- a/app/views/deeds/form/_own_fields.html.erb
+++ b/app/views/deeds/form/_own_fields.html.erb
@@ -6,7 +6,7 @@
     </div>
   </div>
   <div class="row form-group">
-    <%= label_tag t(:date, scope: [:views, :deed]), nil, class: 'col-md-3 form-control-label' %>
+    <%= label_tag t('views.date'), nil, class: 'col-md-3 form-control-label' %>
     <div class="col-md-3">
       <div class="input-group">
         <%= f.label :year, class: 'input-group-addon' %>
