--- a/app/views/deeds/show/_content.html.erb
+++ b/app/views/deeds/show/_content.html.erb
@@ -8,7 +8,7 @@
   </div>
 </div>
 <div class="row">
-  <label class="col-md-3"><strong>Date</strong></label>
+  <label class="col-md-3"><strong><%= t('views.date') %></strong></label>
   <div class="col-md-3">
     <label><strong><%= Deed.human_attribute_name :year %></strong></label>
     <%= deed.year %>
