--- a/app/views/roles/_role.html.erb
+++ b/app/views/roles/_role.html.erb
@@ -11,7 +11,7 @@
       <% when 'place' %>
         <%= icon_for Place %>
     <% end %>
-    <%= t role.referring, scope: [:activerecord, :attributes, :role, :refers_to] %>
+    <%= t(role.referring, scope: 'activerecord.attributes.role.refers_to') %>
   </div>
 <% end %>
 
@@ -31,30 +31,30 @@
   </div>
 
   <div class="btn-group btn-group-sm" role="group">
-    <%= link_to mentions_path(person_id: role.id),
+    <%= link_to mentions_path(role_id: role.id),
                 class: 'btn btn-sm btn-secondary',
-                title: t(:show_linked_mentions, scope: [:views, :role]),
+                title: t('views.show_linked', what: Mention.model_name.human(count: 2)),
                 data: { toggle: 'tooltip' } do %>
       <%= role.mentions.count %>
       <%= icon_for Mention %>
     <% end %>
-    <%= link_to people_path(person_id: role.id),
+    <%= link_to people_path(role_id: role.id),
                 class: 'btn btn-sm btn-secondary',
-                title: t(:show_linked_people, scope: [:views, :role]),
+                title: t('views.show_linked', what: Person.model_name.human(count: 2)),
                 data: { toggle: 'tooltip' } do %>
       <%= role.mentioned_people.length %>
       <%= icon_for Person %>
     <% end %>
-    <%= link_to places_path(person_id: role.id),
+    <%= link_to places_path(role_id: role.id),
                 class: 'btn btn-sm btn-secondary',
-                title: t(:show_linked_places, scope: [:views, :role]),
+                title: t('views.show_linked', what: Place.model_name.human(count: 2)),
                 data: { toggle: 'tooltip' } do %>
       <%= role.mentioned_places.length %>
       <%= icon_for Place %>
     <% end %>
-    <%= link_to deeds_path(person_id: role.id),
+    <%= link_to deeds_path(role_id: role.id),
                 class: 'btn btn-sm btn-secondary',
-                title: t(:show_linked_deeds, scope: [:views, :role]),
+                title: t('views.show_linked', what: Deed.model_name.human(count: 2)),
                 data: { toggle: 'tooltip' } do %>
       <%= role.mentioned_deeds.length %>
       <%= icon_for Deed %>
