--- a/app/views/shared/index/_main_action_btn.html.erb
+++ b/app/views/shared/index/_main_action_btn.html.erb
@@ -2,8 +2,7 @@
   <%= link_to path_to_new_entity,
               class: 'btn btn-primary',
               id: "btn-new-#{entity_model.model_name.to_s.downcase}",
-              title: t(:add_new_btn_title,
-                       scope: [:views, entity_model.model_name.to_s.downcase.to_sym, :actions]),
+              title: t("views.#{entity_model.model_name.to_s.downcase.to_sym}.actions.add_new_btn_title"),
               data: { toggle: 'tooltip', 'turbolinks': false },
               remote: true do -%>
     <%= icon('plus', class: 'fa-fw') %>
@@ -11,7 +10,7 @@
   <%= link_to path_to_refresh,
               class: 'btn btn-secondary',
               id: 'btn-refresh-table',
-              title: t(:refresh_table_btn_title, scope: [:views, :actions]),
+              title: t('views.actions.refresh_table_btn_title'),
               data: { toggle: 'tooltip', 'turbolinks': false },
               remote: true do %>
     <%= icon('refresh', class: 'fa-fw') %>
