--- a/app/views/storages/show/_content.html.erb
+++ b/app/views/storages/show/_content.html.erb
@@ -13,14 +13,15 @@
     <% if storage.notes %>
       <%= storage.notes %>
     <% else %>
-      <span class="text-muted"><%= t :no_notes, scope: [:views] %></span>
+      <span class="text-muted"><%= t('views.no_notes') %></span>
     <% end %>
   </div>
 </div>
 <% if native %>
   <div class="row">
     <label class="col-md-3"><strong><%= Storage.human_attribute_name :collections %></strong></label>
-    <ul class="col-md-9 list-group list-group-flush" id="collections-accordion" role="tablist" aria-multiselectable="true">
+    <ul class="col-md-9 list-group list-group-flush" id="collections-accordion" role="tablist"
+        aria-multiselectable="true">
       <%= render partial: 'collections/nested_show', collection: storage.collections, as: :collection %>
     </ul>
   </div>
