--- a/app/views/contents/form/_own_fields.html.erb
+++ b/app/views/contents/form/_own_fields.html.erb
@@ -3,8 +3,12 @@
     <%= f.label :language, class: 'col-md-3 form-control-label' %>
     <div class="col-md-9">
       <%= f.select :language,
-                   options_for_select(Content::LANGUAGES.map { |e| [t(e, scope: [:activerecord, :attributes, :content, :languages]), e] },
-                                      (@content.language ? @content.language.humanize : nil)),
+                   options_for_select(
+                       Content::LANGUAGES.map {
+                           |e| [t(e, scope: 'activerecord.attributes.content.languages'), e]
+                       },
+                       (@content.language ? @content.language.humanize : nil)
+                   ),
                    {},
                    { class: 'custom-select' } %>
     </div>
