--- a/app/views/deeds/form/_nested_fields.html.erb
+++ b/app/views/deeds/form/_nested_fields.html.erb
@@ -6,7 +6,7 @@
                       icon('refresh', class: 'fa-fw'),
                       id: 'btn-refresh-nested-fields',
                       class: 'btn btn-sm btn-outline-default',
-                      title: t(:refresh_associations, scope: [:views, :modals]),
+                      title: t('views.modals.refresh_associations'),
                       data: { toggle: 'tooltip' } %>
     </span>
   </label>
@@ -17,7 +17,7 @@
         <div class="btn-group btn-group-sm pull-right">
           <%= link_to new_content_path(deed_id: @deed.id),
                       class: 'btn btn-sm btn-primary',
-                      title: t(:add_content, scope: [:view, :deed, :actions]),
+                      title: t('views.deed.actions.add_content'),
                       data: { toggle: 'tooltip' },
                       remote: true do %>
             <%= icon('plus', class: 'fa-fw') %>
@@ -32,11 +32,11 @@
                           icon('trash', class: 'fa-fw'),
                           id: 'btn-deassoc-content',
                           class: 'btn btn-sm btn-danger',
-                          title: t(:remove_content, scope: [:views, :deed, :actions]),
+                          title: t('views.deed.actions.remove_content'),
                           data: { toggle: 'tooltip' } %>
         </div>
         <%= icon_for Content %>
-        <%= t(@deed.content.language, scope: [:activerecord, :attributes, :content, :languages]) %>
+        <%= t(@deed.content.language, scope: 'activerecord.attributes.content.languages') %>
         <br />
         <div class="p-l-2">
           <em>
