--- a/app/views/deeds/show/_translation.html.erb
+++ b/app/views/deeds/show/_translation.html.erb
@@ -1,5 +1,5 @@
 <li class="list-group-item">
-  <%= t translation.language, scope: [:activerecord, :attributes, :content, :languages] %>
+  <%= t(translation.language, scope: 'activerecord.attributes.content.languages') %>
   <span class="pull-right">
     <%= link_to_show_entity translation,
                             url=content_content_translation_path(id: translation.id,
