--- a/app/views/people/_person.html.erb
+++ b/app/views/people/_person.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="col-people-gender">
     <%= icon(person.gender_icon, class: 'fa-fw') %>
-    <%= t person.gender, scope: [:activerecord, :attributes, :person, :genders] %>
+    <%= t(person.gender, scope: 'activerecord.attributes.person.genders') %>
   </div>
 <% end %>
 
@@ -26,28 +26,28 @@
   <div class="btn-group btn-group-sm" role="group">
     <%= link_to mentions_path(person_id: person.id),
                 class: 'btn btn-sm btn-secondary',
-                title: t(:show_linked_mentions, scope: [:views, :person]),
+                title: t('views.show_linked', what: Mention.model_name.human(count: 2)),
                 data: { toggle: 'tooltip' } do %>
       <%= person.mentions.count %>
       <%= icon_for Mention %>
     <% end %>
     <%= link_to places_path(person_id: person.id),
                 class: 'btn btn-sm btn-secondary',
-                title: t(:show_linked_places, scope: [:views, :person]),
+                title: t('views.show_linked', what: Place.model_name.human(count: 2)),
                 data: { toggle: 'tooltip' } do %>
       <%= person.mentioned_places.length %>
       <%= icon_for Place %>
     <% end %>
     <%= link_to roles_path(person_id: person.id),
                 class: 'btn btn-sm btn-secondary',
-                title: t(:show_linked_roles, scope: [:views, :person]),
+                title: t('views.show_linked', what: Role.model_name.human(count: 2)),
                 data: { toggle: 'tooltip' } do %>
       <%= person.mentioned_roles.length %>
       <%= icon_for Role %>
     <% end %>
     <%= link_to deeds_path(person_id: person.id),
                 class: 'btn btn-sm btn-secondary',
-                title: t(:show_linked_deeds, scope: [:views, :person]),
+                title: t('views.show_linked', what: Deed.model_name.human(count: 2)),
                 data: { toggle: 'tooltip' } do %>
       <%= person.mentioned_deeds.length %>
       <%= icon_for Deed %>
